src/main/java/com/example/Delivery/Members/Error/DuplicatePhoneNumberException.java
package com.example.Delivery.Members.Error;

public class DuplicatePhoneNumberException extends RuntimeException {
    public DuplicatePhoneNumberException(String message) {
        super(message);
    }
}